--- a/config/app.yml
+++ b/config/app.yml
@@ -1,2 +1,8 @@
 mysql:
   dns: root:123456@tcp(0.0.0.0:3306)/testdb?charset=utf8mb4&parseTime=True&loc=Local
+redis:
+  addr: "127.0.0.1:6379"
+  password: ""
+  DB: 0
+  poolSize: 30
+  minIdleConn: 30
